<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_StepperAxis" Id="{5d9b6bcb-c24e-46b9-b28e-6c52cb595ade}">
    <Declaration><![CDATA[TYPE ST_StepperAxis :
STRUCT
	stAxisRef	: AXIS_REF;
	bForceHoming : BOOL;
	
	// left/right-dependent parameters
	bOutwardsForward 	: BOOL;
	bOutwardsBackwards	: BOOL;
	bInwardsForward		: BOOL;
	bInwardsBackwards	: BOOL;
	fHomePosition		: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>